Revision history for Acme-CPANAuthors-Nonhuman

{{$NEXT}}
          - goodbye ACE; you seem to want to be human now

0.023     2015-09-24 02:36:15Z
          - welcome IANKENT, our latest member!

0.022     2015-06-27 21:59:02Z
          - welcome ZDM, our latest member!

0.021     2015-01-31 20:51:01Z
          - goodbye ZOUL, KIBI; you seem to want to be human now
          - change the max-width of the container div to be a percentage
            rather than absolute pixel count, improving formatting on wide
            displays

0.020     2014-10-14 00:47:35Z
          - welcome our newest members, CKRAS, EAST and EUGENEK!

0.019     2014-10-05 01:40:11Z
          - fix a few gravatars in html documentation by using gravatars as
            configured on metacpan, rather than asking Acme::CPANAuthors
          - add "avatar_url" method, for returning the metacpan gravatar (as
            compared to the old result from Acme::CPANAuthors->avatar_url)

0.018     2014-10-04 21:48:34Z
          - clean up HTML generation, for better rendering with recent changes
            to metacpan layout (Graham Knop, PR#4)

0.017     2014-08-16 23:49:11Z
          - updated module counts

0.016     2014-06-29 16:53:57Z
          - welcome our newest members, JTRAMMELL, BENW and NMELNICK!

0.015     2014-02-08 23:44:12Z
          - improved HTML markup for web documentation

0.014     2013-11-29 20:11:02Z
          - add 'category' interface, to match what is given to other
            Acme::CPANAuthors::* modules

0.013     2013-10-26 17:01:19Z
          - welcome CARLOS, our latest member!

0.012     2013-10-24 05:25:54Z
          - author data is now generated using the 00whois.xml document,
            rather than 01mailrc.txt, to get non-asciified author names
            (requires encoding fixes in new Dist::Zilla)

0.011     2013-09-28 02:04:33Z
          - more diagnostic updates to siblings test
          - more authors added

0.010     2013-09-25 16:56:23Z