@@ -26,7 +26,13 @@ BEGIN { plan skip_all => 'Need a built version of Acme::CPANAuthors::Nonhuman fo
                 my $version;
                 if (not eval { $version = use_module($_)->VERSION; 1 })
                 {
-                    ::fail($_ . ' has invalid $VERSION!!! please investigate!');
+                    if ($_ eq 'Acme::CPANAuthors::You::re_using' and (not $version or $version < '0.08')) {
+                        ::diag($_ . ' has invalid $VERSION. Could not load due to a misparsed module installed locally?');
+                    }
+                    else {
+                        ::fail($_ . ' has invalid $VERSION!!! please investigate!');
+                    }
+
                     ::diag('error: ' . ($@ || ''));
                     no strict 'refs';
                     $version = ${$_ . '::VERSION'};
