@@ -2,6 +2,9 @@ Revision history for Acme-CPANAuthors-Nonhuman
 
 {{$NEXT}}
           - goodbye ACE; you seem to want to be human now
+          - in tests that check all installed Acme::CPANAuthors modules, work
+            around older versions of Acme::CPANAuthors::You::re_using failing
+            to handle bad $VERSION declarations in locally-installed modules
 
 0.023     2015-09-24 02:36:15Z
           - welcome IANKENT, our latest member!
